--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -120,7 +120,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div id="chart-1" zc-height="568px" zc-json="myJson" zc-width="100%" zingchart="" class="p-3"></div>
+                <div zingchart id="chart-1" zc-json="myJson" zc-width="100%" zc-height="520px"></div>
             </div>
         </div>
     </div>
