--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,11 +11,10 @@
     <link href="scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="scripts/jquery/jquery.min.js"></script>
     <script src="scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="scripts/angular/functions.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="http://cdn.zingchart.com/zingchart.min.js"></script>
-    <script src="http://cdn.zingchart.com/angular/zingchart-angularjs.js"></script>
+    <script src="//cdn.zingchart.com/zingchart.min.js"></script>
+    <script src="//cdn.zingchart.com/angular/zingchart-angularjs.js"></script>
 </head>
 
 <body ng-app="Chart" ng-controller="MainController" class="bg-light">
@@ -171,7 +170,7 @@
                         <i class="fa d-inline mr-3 text-secondary fa-envelope-o"></i>info@pingendo.com</a>
                 </p>
                 <p>
-                    <a href="https://goo.gl/maps/AUq7b9W7yYJ2" class="text-white" target="_blank">
+                    <a href="//goo.gl/maps/AUq7b9W7yYJ2" class="text-white" target="_blank">
                         <i class="fa d-inline mr-3 fa-map-marker text-secondary"></i>365 Park Street, NY</a>
                 </p>
             </div>
@@ -183,10 +182,7 @@
         </div>
     </div>
 </div>
-<pingendo onclick="window.open('https://pingendo.com/', '_blank')"
-          style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">
-    Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block"
-                                            alt="Pingendo logo" height="16"></pingendo>
+
 </body>
 
 </html>
